--- a/examples/de/index.html
+++ b/examples/de/index.html
@@ -2,17 +2,26 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head><title>Egon zappt - Das Programmheft f&uuml;r den Videorecorder von heute</title></head>
+<head>
+<title>Egon zappt - Das Programmheft f&uuml;r den Videorecorder von heute</title>
+<style type="text/css">
+.content { position:absolute; left: 33%; width: 33%; }
+</style>
+</head>
 <body>
+<div class="content">
 <div>
 <h1>Egon zappt - Das Programmheft f&uuml;r den Videorecorder von heute</h1>
 Hier gibt es das Fernsehprogramm f&uuml;r den Videorecorder von heute zum Herunterladen. Die Datenbank ist f&uuml;r den pers&ouml;nlichen nichtkommerziellen Einsatz bestimmt. Unsere Programmdaten erhalten wir von den Pressediensten der Sender. Damit die Videorecorder es nicht so schwer haben werden die Sendungsbeschreibungen vereinheitlicht und mit Zusatzinformationen aus Film- und Seriendatenbanken angereichert.
 </div>
-<div>
-<a href="channels.html">channels / Kan&auml;le</a><br />
-<a href="00index.html">data status</a><br />
-<a href="00logos.html">logos</a><br />
-<a href="00status.html">importer status</a><br />
+<div><ul>
+<li><a href="channels.html">Kan&auml;le</a></li>
+<li><a href="00index.html">data status</a></li>
+<li><a href="../xmltv_compare/00output.html">&Auml;nderungen</a> zwischen gestern und heute, jeweils 02:00 Uhr morgens</li>
+<li><a href="00logos.html">Logos</a></li>
+<li><a href="00status.html">Importprotokolle</a></li>
+</ul>
 Adresse zum Einrichten des XMLTV Grabbers tv_grab_se_swedb: http://xmltv.spaetfruehstuecken.org/xmltv/channels.xml.gz</div>
+</div>
 <a href="https://github.com/dekarl/nonametv"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://d3nwyuy0nl342s.cloudfront.net/img/30f550e0d38ceb6ef5b81500c64d970b7fb0f028/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6f72616e67655f6666373630302e706e67" alt="Fork me on GitHub"></a>
 </body></html>
