--- a/examples/de/index.html
+++ b/examples/de/index.html
@@ -12,7 +12,7 @@
 <div class="content">
 <div>
 <h1>Egon zappt - Das Programmheft f&uuml;r den Videorecorder von heute</h1>
-Hier gibt es das Fernsehprogramm f&uuml;r den Videorecorder von heute zum Herunterladen. Die Datenbank ist f&uuml;r den pers&ouml;nlichen nichtkommerziellen Einsatz bestimmt. Unsere Programmdaten erhalten wir von den Pressediensten der Sender. Damit die Videorecorder es nicht so schwer haben werden die Sendungsbeschreibungen vereinheitlicht und mit Zusatzinformationen aus Film- und Seriendatenbanken angereichert.
+<p>Hier gibt es das Fernsehprogramm f&uuml;r den Videorecorder von heute zum Herunterladen. Die Datenbank ist f&uuml;r den pers&ouml;nlichen nichtkommerziellen Einsatz bestimmt. Unsere Programmdaten erhalten wir von den Pressediensten der Sender. Damit die Videorecorder es nicht so schwer haben werden die Sendungsbeschreibungen vereinheitlicht und mit Zusatzinformationen aus Film- und Seriendatenbanken angereichert.</p>
 </div>
 <div><ul>
 <li><a href="channels.html">Kan&auml;le</a></li>
@@ -21,7 +21,10 @@ Hier gibt es das Fernsehprogramm f&uuml;r den Videorecorder von heute zum Herunt
 <li><a href="00logos.html">Logos</a></li>
 <li><a href="00status.html">Importprotokolle</a></li>
 </ul>
-Adresse zum Einrichten des XMLTV Grabbers tv_grab_se_swedb: http://xmltv.spaetfruehstuecken.org/xmltv/channels.xml.gz</div>
+<p>Adresse zum Einrichten des XMLTV Grabbers tv_grab_se_swedb: http://xmltv.spaetfruehstuecken.org/xmltv/channels.xml.gz</p></div>
+<div><p>Filme werden mit der Wertung und Informationen von <a href="http://www.themoviedb.org/">TMDb</a> angereichert. Bei einigen Filmen ist als deutscher Titel der Originaltitel hinterlegt (der deutsche Titel wird dann als alternativer deutscher Titel gef&uuml;hrt.), dies kann &uuml;ber den Link am Programm korrigiert werden. Sollte ein Film keine Verbindung zu TMDb enthalten kann es daran liegen das eine Suche nach dem deutschen Titel und Produktionsjahr kein eindeutiges Ergebnis bringt.</p></div>
+<div><p>Serien werden mit der Wertung und Informationen von <a href="http://thetvdb.com/">TheTVDB.com</a> angereichert. Alle angereicherten Folgen tragen den Link zur Detailseite auf TheTVDB.com und k&ouml;nnen dort korrigiert werden.</p></div>
+<div><p>Aktuell werden Texte nur von den Pressediensten der jeweiligen Sender &uuml;bernommen, aus den Film- und Seriendatenbanken verwenden wir lediglich Basismetadaten.</p></div>
 </div>
 <a href="https://github.com/dekarl/nonametv"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://d3nwyuy0nl342s.cloudfront.net/img/30f550e0d38ceb6ef5b81500c64d970b7fb0f028/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6f72616e67655f6666373630302e706e67" alt="Fork me on GitHub"></a>
 </body></html>
