add a report of movies that are foreign but could not be found

--- a/examples/de/index.html
+++ b/examples/de/index.html
@@ -20,6 +20,7 @@
 <li><a href="../xmltv_compare/00output.html">&Auml;nderungen</a> zwischen gestern und heute, jeweils 02:00 Uhr morgens</li>
 <li><a href="00logos.html">Logos</a></li>
 <li><a href="00status.html">Importprotokolle</a></li>
+<li><a href="00movies.html">Filme ohne Treffer in TheMovieDB</a></li>
 </ul>
 <p>Adresse zum Einrichten des XMLTV Grabbers tv_grab_se_swedb: http://xmltv.spaetfruehstuecken.org/xmltv/channels.xml.gz</p>
 <p>F&uuml;r Zugriffe mit anderen Programmen ist zwingend die OzTiVo Schnittstelle zu verwenden. Diese ist im <a href="http://www.oztivo.net/twiki/bin/view/TVGuide/StaticXMLGuideAPI">OzTivo Wiki</a> dokumentiert.</p></div>
