reword german landing page

--- a/examples/de/index.html
+++ b/examples/de/index.html
@@ -11,8 +11,8 @@
 <body>
 <div class="content">
 <div>
-<h1>Egon zappt - Das Programmheft f&uuml;r den Videorecorder von heute</h1>
-<p>Hier gibt es das Fernsehprogramm f&uuml;r den Videorecorder von heute zum Herunterladen. Die Datenbank ist f&uuml;r den pers&ouml;nlichen nichtkommerziellen Einsatz bestimmt. Unsere Programmdaten erhalten wir von den Pressediensten der Sender. Damit die Videorecorder es nicht so schwer haben werden die Sendungsbeschreibungen vereinheitlicht und mit Zusatzinformationen aus Film- und Seriendatenbanken angereichert.</p>
+<h1>Egon zappt - Das Programmheft f&uuml;r moderne Mediacenter von heute</h1>
+<p>Hier gibt es das Fernsehprogramm f&uuml;r moderne Mediacenter von heute zum Herunterladen. Die Datenbank ist f&uuml;r den pers&ouml;nlichen nichtkommerziellen Einsatz bestimmt. Unsere Programmdaten erhalten wir von den Pressediensten der Sender. Damit die Mediacenter es nicht so schwer haben werden die Sendungsbeschreibungen vereinheitlicht und mit Zusatzinformationen aus Film- und Seriendatenbanken angereichert.</p>
 </div>
 <div><ul>
 <li><a href="channels.html">Kan&auml;le</a></li>
