update title of german landing page

--- a/examples/de/index.html
+++ b/examples/de/index.html
@@ -3,7 +3,7 @@
   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>Egon zappt - Das Programmheft f&uuml;r den Videorecorder von heute</title>
+<title>Egon zappt - Das Programmheft f&uuml;r moderne Mediacenter von heute</title>
 <style type="text/css">
 .content { position:absolute; left: 33%; width: 33%; }
 </style>
