switch text to our own grabber name

--- a/examples/de/index.html
+++ b/examples/de/index.html
@@ -22,7 +22,7 @@
 <li><a href="00status.html">Importprotokolle</a></li>
 <li><a href="00movies.html">Filme ohne Treffer in TheMovieDB</a></li>
 </ul>
-<p>Adresse zum Einrichten des XMLTV Grabbers tv_grab_se_swedb: http://xmltv.spaetfruehstuecken.org/xmltv/channels.xml.gz</p>
+<p>Adresse zum Einrichten des XMLTV Grabbers tv_grab_eu_egon: http://xmltv.spaetfruehstuecken.org/xmltv/channels.xml.gz</p>
 <p>F&uuml;r Zugriffe mit anderen Programmen ist zwingend die OzTiVo Schnittstelle zu verwenden. Diese ist im <a href="http://www.oztivo.net/twiki/bin/view/TVGuide/StaticXMLGuideAPI">OzTivo Wiki</a> dokumentiert.</p></div>
 <div><p>Filme werden mit der Wertung und Informationen von <a href="http://www.themoviedb.org/">TMDb</a> angereichert. Bei einigen Filmen ist als deutscher Titel der Originaltitel hinterlegt (der deutsche Titel wird dann als alternativer deutscher Titel gef&uuml;hrt.), dies kann &uuml;ber den Link am Programm korrigiert werden. Sollte ein Film keine Verbindung zu TMDb enthalten kann es daran liegen das eine Suche nach dem deutschen Titel und Produktionsjahr kein eindeutiges Ergebnis bringt.</p></div>
 <div><p>Serien werden mit der Wertung und Informationen von <a href="http://thetvdb.com/">TheTVDB.com</a> angereichert. Alle angereicherten Folgen tragen den Link zur Detailseite auf TheTVDB.com und k&ouml;nnen dort korrigiert werden.</p></div>
